[package]
name = "wsauth-demo"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
actix = { version = "0.11.0-beta.3", default-features = false }
actix-codec = "0.4.0-beta.1"
actix-http = "3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-web = { version = "4.0.0-beta.5", default-features = false }
actix-web-actors = "=4.0.0-beta.3"
anyhow = "1.0.40"
bytes = { version = "1.0.1", features = ["serde"] }
bytestring = { version = "1.0.0", features = ["serde"] }
env_logger = "0.8.3"
log = { version = "0.4.14", features = ["serde", "release_max_level_info", "max_level_debug"] }
mimalloc = { version = "0.1.25", default-features = false, features = ["override"] }
openssl = { version = "0.10.48", features = ["vendored"] }
serde = { version = "1.0.125", features = ["derive"] }
tapa-trait-serde = { version = "0.2.0", features = ["json", "yaml"], default-features = false }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
